--- a/source/01ArreglosYestructuras/Makefile
+++ b/source/01ArreglosYestructuras/Makefile
@@ -1,6 +1,6 @@
-EXE:=TestArr
-EXE1:=TestStruct 
-PARACLEAN:=$(EXE) $(EXE1) *.o
+EXE:=TestArr 
+EXE1:=TestStruct
+PARACLEAN:=*.o $(EXE) $(EXE1) 
 CC=gcc
 MYCFLAGS = -I./ -I./include/
 default:$(EXE) $(EXE1)
@@ -11,7 +11,7 @@ $(EXE):ArreglosYEstructuras.c main.c
 $(EXE1):ArreglosYEstructuras.o main1.o
 	$(CC) $^ -o $@
 main1.o:main1.c
-	$(CC) -c $(MYCFLAGS) $< -o $@
+	$(CC) -DVERS2 -c $(MYCFLAGS) $< -o $@
 ArreglosYEstructuras.o:ArreglosYEstructuras.c
 	$(CC) -c $(MYCFLAGS) $< -o $@
 clean:
